# cellophane

./: USAGE.md  pyproject.toml
.github/workflows/: def_changelog.yml  def_move-pr.yml  def_publish-release.yml  def_pytest.yml  def_release-pr.yml  def_reviewdog-lint.yml  def_rye.yml  def_semver.yml  def_sync_pyproject.yml  pr-close-main.yml  pr-open-complete.yml  pr-open-dev.yml  pr-open-main.yml  push-dev.yml
cellophane/src/data/: output.py
cellophane/src/logs/: util.py
cellophane/src/modules/: checkpoint.py  decorators.py
src/cellophane/: __init__.py  __main__.py  cellophane.py  schema.base.yaml  src.py
src/cellophane/cfg/: click_.py  config.py  flag.py  jsonschema_.py  schema.py  util.py  with_options.py
src/cellophane/cleanup/: cleanup.py
src/cellophane/data/: __init__.py  container.py  exceptions.py  merger.py  output.py  samples.py  util.py
src/cellophane/dev/: __init__.py  cli.py  exceptions.py  repo.py  util.py
src/cellophane/executors/: environment.py  executor.py  mock_executor.py  subprocess_executor.py
src/cellophane/logs/: util.py
src/cellophane/modules/: __init__.py  callbacks.py  checkpoint.py  decorators.py  deps.py  hook.py  (+3 more)
tests/: conftest.py  test_cfg.py  test_data.py  test_modules.py
tests/test_data/: test_data.py
tests/test_dev/: fixtures.py  test_dev.py
tests/test_example_config/: test_example_config.py
tests/test_flags/: test_flags.py
tests/test_integration/: test_checkpoint.py  test_cleanup.py  test_config.py  test_exceptions.py  test_executor.py  test_hook.py  test_merge.py  test_module_load.py  test_outputs.py  test_runner.py  test_samples.py  test_tutorial.py
tests/test_legacy/: test_legacy.py  test_legacy.yaml
tests/test_util/: test_util.py
(+45 files in other folders)
