[project]
name = "cellophane"
version = "1.2.1.dev0"
description = "Library for feature-rich wrapper development"
authors = [{name = "Erik Demitz-Helin",email = "erik.demitz-helin@gu.se"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.0,<9.0.0",
    "psutil>=5.9.4,<6.0.0",
    "rich-click>=1.8.9,<2.0.0",
    "humanfriendly>=10.0,<11.0",
    "jsonschema>=4.17.3,<5.0.0",
    "attrs>=23.1.0,<24.0.0",
    "ruamel-yaml>=0.17.32,<0.18.0",
    "mpire[dill]>=2.10.2",
    "gitpython>=3.1.31,<4.0.0",
    "questionary>=2.0.1,<3.0.0",
    "frozendict>=2.3.8,<3.0.0",
    "semver>=3.0.2,<4.0.0",
    "packaging>=24.0,<25.0",
    "xxhash>=3.4.1,<4.0.0",
    "pytest-profiling>=1.7.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-repeat>=0.9.1,<0.10.0",
    "pytest-clarity>=1.0.1,<2.0.0",
    "pytest-xdist>=3.3.1,<4.0.0",
    "types-jsonschema>=4.19.0.3,<5.0.0.0",
    "types-humanfriendly>=10.0.1.10,<11.0.0.0",
    "types-psutil>=5.9.5.16,<6.0.0.0",
    "pytest-subprocess>=1.5.3",
    "ty>=0.0.38",
    "ruff>=0.15.13",
]

[project.scripts]
cellophane = "cellophane.dev:main"

[tool.coverage.run]
omit = [
    "src/cellophane/testing/*",
    "src/cellophane/new_testing/*",
    "src/cellophane/__main__.py",
    "src/cellophane/__init__.py",
    "src/cellophane/src.py",
    "tests/*"
]
concurrency = [
    "multiprocessing",
    "thread"
]
branch = false

[tool.coverage.report]
omit = ["**/pytest-*/*"]

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"
